# aieng-template-mvp

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Dockerfile.vllm  README.md  build.sh  entrypoint.sh  index.html  mkdocs.yml  nginx.conf  pyproject.toml
.github/: dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: ci.yml  deploy.yml  docs.yml
app/: api.py
app/demo/static/: script.js  style.css
app/demo/templates/: index.html
assets/template-ui/: 404.html  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  _not-found.html  _not-found.txt  index.html  index.txt
assets/template-ui/_next/static/chunks/: 1af092bd6713b1c1.css  332eea3b3d0a3e11.css  404-38e42d766fa87d15.js  46664c8e71d6fed9.css  57f9af25a34049ce.css  64d9ed65902e0ad8.js  87-257480da4b830f04.js  983-8b779068fed461fd.js  9a52a0ea730dc533.js  a378f63b7ba8fa41.js  abf3f997e4392681.js  c79bf538dc27918b.js  c8c94e43941c1efa.js  cae41cd0b9ca9f76.js  e4e741df99215765.js  main-a8c421533bc3f3a9.js  main-app-c572e5cd99aa35db.js  main-e34f8b67da356424.js  turbopack-69d42cf16af8d47a.js  turbopack-e63b54d63cb0cd8d.js  turbopack-f6ee4dfbfc7ef9a7.js
assets/template-ui/_next/static/chunks/app/: layout-34a9efa456893d04.js  layout-6197e5100eb8afbc.js  layout-f16e5429ef586600.js  layout-f4a4c08462c08348.js  page-1a0b23cca3d9b511.js  page-7d6545f1bf794ef2.js
assets/template-ui/_next/static/css/: cecac55d76d97c35.css
assets/template-ui/_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
backend/: pyproject.toml
backend-development/: index.html
docker-deployment/: index.html
docs/: getting-started.md  index.md  template-preview.md
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend-development/: index.html
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/components/: header.tsx  hero.tsx
getting-started/: index.html
search/: search_index.json
stylesheets/: extra.css
template-preview/: index.html
tests/: __init__.py  test_api.py
