[project]
name = "demo-app"
version = "0.1.0"
description = "Demo app — FastAPI proxy to a vLLM Cloud Run GPU service"
readme = "README.md"
authors = [{ name = "Vector AI Engineering", email = "ai_engineering@vectorinstitute.ai" }]
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.46.0",
    "openai>=2.32.0",
    "pydantic>=2.13.3",
    "slowapi>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pip>=25.2",
    "pip-audit>=2.10.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.1",
    "ruff>=0.13.3",
]

[tool.uv]
default-groups = ["dev"]

[tool.mypy]
follow_imports = "normal"
ignore_missing_imports = false
install_types = true
pretty = true
non_interactive = true
allow_untyped_defs = false
no_implicit_optional = true
check_untyped_defs = true
namespace_packages = true
explicit_package_bases = true
warn_unused_configs = true
allow_subclassing_any = false
allow_untyped_calls = false
allow_incomplete_defs = false
allow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
implicit_reexport = false
strict_equality = true
extra_checks = true

[tool.ruff]
include = ["*.py", "pyproject.toml"]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "COM", # flake8-commas
    "C4",  # flake8-comprehensions
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ICN", # flake8-import-conventions
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle
    "N",   # pep8-naming
    "ERA", # eradicate
    "PL",  # pylint
]
fixable = ["A", "B", "COM", "C4", "RET", "SIM", "ICN", "Q", "RSE", "D", "E", "F", "I", "W", "N", "ERA", "PL"]
ignore = [
    "B905",   # zip() without explicit strict=
    "E501",   # line too long
    "D203",   # 1 blank line before class docstring
    "D213",   # Multi-line docstring at second line
    "PLR2004", # Magic number
    "PLR0913", # Too many arguments
    "COM812",  # Missing trailing comma
    "ERA001",  # Commented-out code
    "A001",    # Variable shadowing builtin
    "A002",    # Argument shadowing builtin
    "D301",    # r-strings for docstrings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]
"tests/*" = ["D103", "D105", "D107"]

[tool.ruff.lint.pep8-naming]
ignore-names = ["X*", "setUp"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration_test: marks tests as integration tests",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "*__init__.py"]
